--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -653,6 +653,18 @@
       "Training...\n",
       "\n",
       "Epoch 1, Validation loss = 0.702, Validation Accuracy = 0.804\n",
+      "\n",
+      "Epoch 2, Validation loss = 0.487, Validation Accuracy = 0.864\n",
+      "\n",
+      "Epoch 3, Validation loss = 0.445, Validation Accuracy = 0.879\n",
+      "\n",
+      "Epoch 4, Validation loss = 0.390, Validation Accuracy = 0.898\n",
+      "\n",
+      "Epoch 5, Validation loss = 0.397, Validation Accuracy = 0.898\n",
+      "\n",
+      "Epoch 6, Validation loss = 0.438, Validation Accuracy = 0.898\n",
+      "\n",
+      "Epoch 7, Validation loss = 0.350, Validation Accuracy = 0.905\n",
       "\n"
      ]
     }
