--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -665,6 +665,32 @@
       "Epoch 6, Validation loss = 0.438, Validation Accuracy = 0.898\n",
       "\n",
       "Epoch 7, Validation loss = 0.350, Validation Accuracy = 0.905\n",
+      "\n",
+      "Epoch 8, Validation loss = 0.464, Validation Accuracy = 0.898\n",
+      "\n",
+      "Epoch 9, Validation loss = 0.429, Validation Accuracy = 0.912\n",
+      "\n",
+      "Epoch 10, Validation loss = 0.371, Validation Accuracy = 0.917\n",
+      "\n",
+      "Epoch 11, Validation loss = 0.331, Validation Accuracy = 0.927\n",
+      "\n",
+      "Epoch 12, Validation loss = 0.465, Validation Accuracy = 0.910\n",
+      "\n",
+      "Epoch 13, Validation loss = 0.422, Validation Accuracy = 0.929\n",
+      "\n",
+      "Epoch 14, Validation loss = 0.390, Validation Accuracy = 0.927\n",
+      "\n",
+      "Epoch 15, Validation loss = 0.371, Validation Accuracy = 0.925\n",
+      "\n",
+      "Epoch 16, Validation loss = 0.448, Validation Accuracy = 0.911\n",
+      "\n",
+      "Epoch 17, Validation loss = 0.417, Validation Accuracy = 0.919\n",
+      "\n",
+      "Epoch 18, Validation loss = 0.451, Validation Accuracy = 0.922\n",
+      "\n",
+      "Epoch 19, Validation loss = 0.376, Validation Accuracy = 0.936\n",
+      "\n",
+      "Epoch 20, Validation loss = 0.325, Validation Accuracy = 0.944\n",
       "\n"
      ]
     }
