--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -691,6 +691,18 @@
       "Epoch 19, Validation loss = 0.376, Validation Accuracy = 0.936\n",
       "\n",
       "Epoch 20, Validation loss = 0.325, Validation Accuracy = 0.944\n",
+      "\n",
+      "Epoch 21, Validation loss = 0.436, Validation Accuracy = 0.928\n",
+      "\n",
+      "Epoch 22, Validation loss = 0.424, Validation Accuracy = 0.927\n",
+      "\n",
+      "Epoch 23, Validation loss = 0.373, Validation Accuracy = 0.935\n",
+      "\n",
+      "Epoch 24, Validation loss = 0.398, Validation Accuracy = 0.937\n",
+      "\n",
+      "Epoch 25, Validation loss = 0.422, Validation Accuracy = 0.936\n",
+      "\n",
+      "Epoch 26, Validation loss = 0.378, Validation Accuracy = 0.941\n",
       "\n"
      ]
     }
